--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
+    <main>
+        <h1>Hello world</h1>
+    </main>
 
 </body>
 
-</html>@import url(https://fonts.googleapis.com/css?family=Jost:400,700,italic,);
+</html>
