--- a/index.html
+++ b/index.html
@@ -10,9 +10,34 @@
 </head>
 
 <body>
-    <main>
-        <h1>Hello world</h1>
-    </main>
+    <header>
+        <div class="container">
+            <div class="header">
+                <a href="#" class="logo">
+                    <img src="./img/logo.svg" alt="Логотип">
+                </a>
+                <nav>
+                    <ul class="header__nav">
+                        <li class="header__item">
+                            <a href="#" class="header__link">Home</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__link">Our Projects</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__link">Blog</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__link">Contact</a>
+                        </li>
+                        <li class="header__item">
+                            <button class="header__search"><img src="./img/search.svg" alt=""></button>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
 
 </body>
 
