--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
                             <a href="#" class="header__link">Contact</a>
                         </li>
                         <li class="header__item">
-                            <button class="header__search"><img src="./img/search.svg" alt=""></button>
+                            <button class="header__search" onclick="openModal()">
+                                <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g opacity="0.8">
+                                        <path
+                                            d="M16.6837 17.1844L21.9994 22.5001M19.375 10.6875C19.375 15.7616 15.2616 19.875 10.1875 19.875C5.11338 19.875 1 15.7616 1 10.6875C1 5.61338 5.11338 1.5 10.1875 1.5C15.2616 1.5 19.375 5.61338 19.375 10.6875Z"
+                                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                                    </g>
+                                </svg>
+                            </button>
                         </li>
                     </ul>
                 </nav>
@@ -39,6 +48,79 @@
         </div>
     </header>
 
+    <main>
+        <div class="hero">
+            <img src="./img/bg.jpg" alt="" class="hero__img">
+            <div class="container">
+                <div class="hero__content">
+                    <h1 class="hero__title">Let Your Home
+                        Be Unique</h1>
+                    <p class="hero__text">There are many variations of the passages of lorem Ipsum
+                        fromavailable,variations of the passages.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="about">
+            <div class="container">
+                <div class="about__info">
+                    <h2 class="title-2">We Create The Art Of Stylish Living Stylishly</h2>
+                    <p>It is a long established fact that a reader will be distracted by the of readable content of a
+                        page when lookings at its layouts the points of using that it has a more-or-less normal.</p>
+                    <a class="about__phone" href="tel:+79001111111">
+                        <div class="about__phone-img">
+                            <img src="./img/tel.svg" alt="">
+                        </div>
+                        <div class="about__phone-inner">
+                            <p class="about__phone-number">012345678</p>
+                            <p class="about__phone-text">Call Us Anytime</p>
+                        </div>
+                    </a>
+                    <button class="btn">Get Free Estimate</button>
+                </div>
+                <div class="about__img">
+                    <img src="./img/about.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__wrapper">
+
+                <a href="#" class="logo"><img src="./img/logo.svg" alt=""></a>
+                <div class="footer__inner">
+                    <address class="footer__address">55 East Birchwood Ave. Brooklyn, New York 11201</address>
+                    <a class="footer__mail" href="mailto:contact@interno.com">contact@interno.com</a>
+                    <a class="footer__tel" href="tel:+79001111111">(123) 456 - 7890</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <div class="overlay" id="overlay">
+        <div class="modal-search">
+            <div class="container">
+                <form action="#" class="form-search">
+                    <input type="text" class="form-search__input" placeholder="Search">
+                    <button type="submit" class="form-search__submit">
+                        <svg width="8" height="16" viewBox="0 0 8 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.05714 15L7 8.31429L1.05714 1.62857" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                    </button>
+                    <button type="button" class="form-search__close" onclick="closeModal()">
+                        <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M21.9783 1.38286L20.5715 -0.0222168L10.9548 9.57362L1.33939 -0.0222168L-0.0700684 1.38021L9.54663 10.9774L-0.0687413 20.5719L1.33674 21.9783L10.9548 12.3811L20.5701 21.977L21.9783 20.5745L12.3616 10.9774L21.9783 1.38286Z" />
+                        </svg>
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <script src="./script/script.js"></script>
 </body>
 
 </html>
