Сделана разметка следующий блоков: отзывы, клинеты, числа, последние статьи

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interno</title>
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
@@ -49,7 +50,7 @@
     </header>
 
     <main>
-        <div class="hero">
+        <section class="hero">
             <img src="./img/bg.jpg" alt="" class="hero__img">
             <div class="container">
                 <div class="hero__content">
@@ -59,9 +60,9 @@
                         fromavailable,variations of the passages.</p>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div class="about">
+        <section class="about">
             <div class="container">
                 <div class="about__info">
                     <h2 class="title-2">We Create The Art Of Stylish Living Stylishly</h2>
@@ -82,7 +83,163 @@
                     <img src="./img/about.jpg" alt="">
                 </div>
             </div>
-        </div>
+        </section>
+
+        <section class="feedback">
+            <div class="container">
+                <div class="swiper feedback-swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide feedback-swiper__slide">
+                            <h3 class="feedback-swiper__title title-2">What our Customers says...</h3>
+                            <div class="feedback-swiper__inner">
+                                <p class="feedback-swiper__text">I like an interior that defies labeling. I don't really
+                                    want
+                                    someone to walk into a room and know that I did it</p>
+                                <p class="feedback-swiper__author">-BUNNY WILLIAMS</p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide feedback-swiper__slide">
+                            <h3 class="feedback-swiper__title title-2">What our Customers says...</h3>
+                            <div class="feedback-swiper__inner">
+                                <p class="feedback-swiper__text">I like an interior that defies labeling. I don't really
+                                    want
+                                    someone to walk into a room and know that I did it</p>
+                                <p class="feedback-swiper__author">-BUNNY WILLIAMS</p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide feedback-swiper__slide">
+                            <h3 class="feedback-swiper__title title-2">What our Customers says...</h3>
+                            <div class="feedback-swiper__inner">
+                                <p class="feedback-swiper__text">I like an interior that defies labeling. I don't really
+                                    want
+                                    someone to walk into a room and know that I did it</p>
+                                <p class="feedback-swiper__author">-BUNNY WILLIAMS</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="swiper-button-next feedback-swiper__next"></div>
+                    <div class="swiper-button-prev feedback-swiper__prev"></div>
+                </div>
+            </div>
+        </section>
+
+        <section class="clients page">
+            <div class="container">
+                <ul class="clients__list">
+                    <li class="clients__item">
+                        <img src="./img/clients/01.svg" alt="">
+                    </li>
+                    <li class="clients__item">
+                        <img src="./img/clients/02.svg" alt="">
+                    </li>
+                    <li class="clients__item">
+                        <img src="./img/clients/03.svg" alt="">
+                    </li>
+                    <li class="clients__item">
+                        <img src="./img/clients/04.svg" alt="">
+                    </li>
+                    <li class="clients__item">
+                        <img src="./img/clients/05.svg" alt="">
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="numbers">
+            <div class="container">
+                <ul class="numbers__list">
+                    <li class="numbers__item">
+                        <p>
+                            <span>12</span>
+                            Years Of Experiance
+                        </p>
+                    </li>
+                    <li class="numbers__item">
+                        <p>
+                            <span>85</span>
+                            Success Project
+                        </p>
+                    </li>
+                    <li class="numbers__item">
+                        <p>
+                            <span>15</span>
+                            Active Project
+                        </p>
+                    </li>
+                    <li class="numbers__item">
+                        <p>
+                            <span>95</span>
+                            Happy Customers
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="article page">
+            <div class="container">
+                <h2 class="article title-2">Articles & News</h2>
+                <p>
+                    It is a long established fact that a reader will be distracted by the of readable content of a page
+                    when lookings at its layouts the points of using.
+                </p>
+                <ul class="article__list">
+                    <li class="article__item">
+                        <div class="article__item-thumb">
+                            <img src="./img/article/1.png" alt="">
+                            <span class="article__item-tag">Kitchan Design</span>
+                        </div>
+                        <h3 class="article__item-title title-3">Let’s Get Solution For Building Construction Work</h3>
+                        <div class="article__item-inner">
+                            <span class="article__date">26 December,2022 </span>
+                            <a href="" class="article__link">
+                                <svg width="9" height="16" viewBox="0 0 9 16" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.77101 14.9527L7.71387 8.26698L1.77101 1.58127" stroke-width="2"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="article__item">
+                        <div class="article__item-thumb">
+                            <img src="./img/article/1.png" alt="">
+                            <span class="article__item-tag">Kitchan Design</span>
+                        </div>
+                        <h3 class="article__item-title title-3">Let’s Get Solution For Building Construction Work</h3>
+                        <div class="article__item-inner">
+                            <span class="article__date">26 December,2022 </span>
+                            <a href="" class="article__link">
+                                <svg width="9" height="16" viewBox="0 0 9 16" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.77101 14.9527L7.71387 8.26698L1.77101 1.58127" stroke-width="2"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="article__item">
+                        <div class="article__item-thumb">
+                            <img src="./img/article/1.png" alt="">
+                            <span class="article__item-tag">Kitchan Design</span>
+                        </div>
+                        <h3 class="article__item-title title-3">Let’s Get Solution For Building Construction Work</h3>
+                        <div class="article__item-inner">
+                            <span class="article__date">26 December,2022 </span>
+                            <a href="" class="article__link">
+                                <svg width="9" height="16" viewBox="0 0 9 16" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.77101 14.9527L7.71387 8.26698L1.77101 1.58127" stroke-width="2"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
     </main>
 
     <footer class="footer">
@@ -120,6 +277,7 @@
             </div>
         </div>
     </div>
+    <script src="./script/swiper-bundle.min.js"></script>
     <script src="./script/script.js"></script>
 </body>
 
