--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <a href="#" class="header__link">Our Projects</a>
                         </li>
                         <li class="header__item">
-                            <a href="#" class="header__link">Blog</a>
+                            <a href="blog.html" class="header__link">Blog</a>
                         </li>
                         <li class="header__item">
                             <a href="#" class="header__link">Contact</a>
@@ -237,6 +237,42 @@
                         </div>
                     </li>
                 </ul>
+            </div>
+        </section>
+
+        <section class="subscribe">
+            <div class="container">
+                <div class="subscribe__inner">
+                    <h2 class="subscribe__title title-2">
+                        Personally Newsletter
+                    </h2>
+                    <p class="subscribe__text">
+                        A bi-weekly newsletter of design inspiration.
+                    </p>
+                    <form action="#" class="subscribe__form">
+                        <input type="email" placeholder="Email address">
+                        <button type="submit">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+
+        <section class="contact-us">
+            <div class="container">
+                <h2 class="contact-us__title title-2">
+                    Creative project? Let's have
+                    a productive talk.
+                </h2>
+                <form action="#" class="contact-us__form">
+                    <input type="text" placeholder="Name">
+                    <input type="email" placeholder="Email">
+                    <textarea placeholder="Hello Iam Intrested in.."></textarea>
+                    <div class="contact-us__btn">
+                        <button class="btn" type="submit">
+                            Send Now
+                        </button>
+                    </div>
+                </form>
             </div>
         </section>
 
