Внесены правки в пагинацию. Начал верстать сайд бар

--- a/blog.html
+++ b/blog.html
@@ -96,7 +96,7 @@
                     </div>
                 </section>
                 <div class="article">
-
+                    <h2 class="article__title title-2">Articles & News</h2>
 
                     <ul class="article__list">
                         <li class="article__item">
