Доделал сайдбар, осталось настроить текст у автора поста

--- a/post.html
+++ b/post.html
@@ -69,19 +69,107 @@
                             <h4 class="widget__title title-3">
                                 Latest News
                             </h4>
+                            <ul class="widget-latest__list">
+                                <li class="widget-latest__item">
+                                    <a href="#" class="widget-latest__title">
+                                        We Focus On Comfort
+                                        And Gorgeous
+                                    </a>
+                                    <span class="widget-latest__date">06/02/2020</span>
+                                </li>
+                                <li class="widget-latest__item">
+                                    <a href="#" class="widget-latest__title">
+                                        We Focus On Comfort
+                                        And Gorgeous
+                                    </a>
+                                    <span class="widget-latest__date">06/02/2020</span>
+                                </li>
+                                <li class="widget-latest__item">
+                                    <a href="#" class="widget-latest__title">
+                                        We Focus On Comfort
+                                        And Gorgeous
+                                    </a>
+                                    <span class="widget-latest__date">06/02/2020</span>
+                                </li>
+                            </ul>
                         </div>
                         <div class="widget widget-category">
                             <h4 class="widget__title title-3">
                                 Categories
                             </h4>
+                            <ul class="widget-category__list">
+                                <li class="widget-category__item">
+                                    <a href="#" class="widget-category__title">
+                                        Decoration
+                                    </a>
+                                </li>
+                                <li class="widget-category__item">
+                                    <a href="#" class="widget-category__title">
+                                        Door Windows
+                                    </a>
+                                </li>
+                                <li class="widget-category__item">
+                                    <a href="#" class="widget-category__title">
+                                        Home Land
+                                    </a>
+                                </li>
+                                <li class="widget-category__item">
+                                    <a href="#" class="widget-category__title">
+                                        Roof Installation
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
+
                         <div class="widget widget-tags">
                             <h4 class="widget__title title-3">
                                 Tags
                             </h4>
+                            <ul class="widget-tags__list">
+                                <li class="widget-tags__item">
+                                    <a href="#" class="widget-tags__link">
+                                        Kitchen
+                                    </a>
+                                </li>
+                                <li class="widget-tags__item">
+                                    <a href="#" class="widget-tags__link">
+                                        Bedroom
+                                    </a>
+                                </li>
+                                <li class="widget-tags__item">
+                                    <a href="#" class="widget-tags__link">
+                                        Building
+                                    </a>
+                                </li>
+                                <li class="widget-tags__item">
+                                    <a href="#" class="widget-tags__link">
+                                        Architecture
+                                    </a>
+                                </li>
+                                <li class="widget-tags__item">
+                                    <a href="#" class="widget-tags__link">
+                                        Kitchen Planning
+                                    </a>
+                                </li>
+                                <li class="widget-tags__item">
+                                    <a href="#" class="widget-tags__link">
+                                        Bedroom
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
-                        <div class="author">
 
+                        <div class="author">
+                            <div class="author__head">
+                                <div class="author__thumb">
+                                    <img src="./img/author-photo.png" alt="" class="author__img">
+                                </div>
+                                <div class="author__info">
+                                    <h4 class="author__name">John Smith</h4>
+                                    <span class="author__role">Author</span>
+                                </div>
+                            </div>
+                            <p class="author__text"></p>
                         </div>
 
                     </div>
