Установлены изображение и начато описание стилей

--- a/post.html
+++ b/post.html
@@ -62,7 +62,7 @@
                             <h1>Let’s Get Solution for Building Construction Work</h1>
                         </header>
                         <div class="post__thumb">
-                            <img src="" alt="">
+                            <img src="./img/post-thumb.jpg" alt="">
                         </div>
                         <span class="post__date">26 December,2022 </span>
 
@@ -104,7 +104,7 @@
                                     available, but the majority have suffered.</li>
                             </ol>
                             <figure>
-                                <img src="" alt="">
+                                <img src="./img/post-img.jpg" alt="">
                             </figure>
                         </div>
                     </article>
