--- a/post.html
+++ b/post.html
@@ -23,7 +23,7 @@
                             <a href="index.html" class="header__link">Home</a>
                         </li>
                         <li class="header__item">
-                            <a href="#" class="header__link">Our Projects</a>
+                            <a href="./portfolio.html" class="header__link">Our Projects</a>
                         </li>
                         <li class="header__item">
                             <a href="#" class="header__link">Blog</a>
