Не понятный скрол, странный -margin при auto у container

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="none">
         <div class="container">
             <div class="header">
                 <a href="#" class="logo">
@@ -50,7 +50,7 @@
     </header>
 
     <main>
-        <section class="hero">
+        <section class="hero none">
             <img src="./img/bg.jpg" alt="" class="hero__img">
             <div class="container">
                 <div class="hero__content">
@@ -85,7 +85,7 @@
             </div>
         </section>
 
-        <section class="feedback">
+        <section class="feedback none">
             <div class="container">
                 <div class="swiper feedback-swiper">
                     <div class="swiper-wrapper">
@@ -124,7 +124,7 @@
             </div>
         </section>
 
-        <section class="clients page">
+        <section class="clients page none">
             <div class="container">
                 <ul class="clients__list">
                     <li class="clients__item">
@@ -146,7 +146,7 @@
             </div>
         </section>
 
-        <section class="numbers">
+        <section class="numbers none">
             <div class="container">
                 <ul class="numbers__list">
                     <li class="numbers__item">
@@ -177,7 +177,7 @@
             </div>
         </section>
 
-        <section class="article page">
+        <section class="article page none">
             <div class="container">
                 <h2 class="article title-2">Articles & News</h2>
                 <p>
@@ -240,7 +240,7 @@
             </div>
         </section>
 
-        <section class="subscribe">
+        <section class="subscribe none">
             <div class="container">
                 <div class="subscribe__inner">
                     <h2 class="subscribe__title title-2">
@@ -257,7 +257,7 @@
             </div>
         </section>
 
-        <section class="contact-us">
+        <section class="contact-us none">
             <div class="container">
                 <h2 class="contact-us__title title-2">
                     Creative project? Let's have
@@ -278,7 +278,7 @@
 
     </main>
 
-    <footer class="footer">
+    <footer class="footer none">
         <div class="container">
             <div class="footer__wrapper">
 
