--- a/portfolio.html
+++ b/portfolio.html
@@ -20,31 +20,29 @@
                 <nav>
                     <ul class="header__nav">
                         <li class="header__item">
-                            <a href="index.html" class="header__link">Home</a>
+                            <a href="#" class="header__link">Home</a>
                         </li>
                         <li class="header__item">
-                            <a href="#" class="header__link">Our Projects</a>
+                            <a href="./portfolio.html" class="header__link">Our Projects</a>
                         </li>
                         <li class="header__item">
-                            <a href="./blog.html" class="header__link">Blog</a>
+                            <a href="blog.html" class="header__link">Blog</a>
                         </li>
                         <li class="header__item">
-                            <a href="#" class="header__link">Contact</a>
-                        </li>
-                        <li class="header__item">
-                            <button class="header__search" onclick="openModal()">
-                                <svg width="23" height="24" viewBox="0 0 23 24" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <g opacity="0.8">
-                                        <path
-                                            d="M16.6837 17.1844L21.9994 22.5001M19.375 10.6875C19.375 15.7616 15.2616 19.875 10.1875 19.875C5.11338 19.875 1 15.7616 1 10.6875C1 5.61338 5.11338 1.5 10.1875 1.5C15.2616 1.5 19.375 5.61338 19.375 10.6875Z"
-                                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                    </g>
-                                </svg>
-                            </button>
+                            <a href="./contact.html" class="header__link">Contact</a>
                         </li>
                     </ul>
                 </nav>
+                <button class="header__search" onclick="openModal()">
+                    <svg width="23" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g opacity="0.8">
+                            <path
+                                d="M16.6837 17.1844L21.9994 22.5001M19.375 10.6875C19.375 15.7616 15.2616 19.875 10.1875 19.875C5.11338 19.875 1 15.7616 1 10.6875C1 5.61338 5.11338 1.5 10.1875 1.5C15.2616 1.5 19.375 5.61338 19.375 10.6875Z"
+                                stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                        </g>
+                    </svg>
+                </button>
+                <button class="header__menu" onclick="openMenu()"></button>
             </div>
         </div>
     </header>
@@ -144,7 +142,35 @@
             </div>
         </div>
     </div>
-
+    <div class="overlay" id="overlayMenu">
+        <div class="modal-menu">
+            <div class="container">
+                <nav>
+                    <ul class="modal-menu__nav">
+                        <li class="modal-menu__item">
+                            <a href="#" class="modal-menu__link">Home</a>
+                        </li>
+                        <li class="modal-menu__item">
+                            <a href="./portfolio.html" class="modal-menu__link">Our Projects</a>
+                        </li>
+                        <li class="modal-menu__item">
+                            <a href="blog.html" class="modal-menu__link">Blog</a>
+                        </li>
+                        <li class="modal-menu__item">
+                            <a href="./contact.html" class="modal-menu__link">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+                <button type="button" class="modal-menu__close" onclick="closeMenu()">
+                    <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M21.9783 1.38286L20.5715 -0.0222168L10.9548 9.57362L1.33939 -0.0222168L-0.0700684 1.38021L9.54663 10.9774L-0.0687413 20.5719L1.33674 21.9783L10.9548 12.3811L20.5701 21.977L21.9783 20.5745L12.3616 10.9774L21.9783 1.38286Z" />
+                    </svg>
+                </button>
+                </form>
+            </div>
+        </div>
+    </div>
     <script src="./script/swiper-bundle.min.js"></script>
     <script src="./script/script.js"></script>
 </body>
