--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
                 <nav>
                     <ul class="header__nav">
                         <li class="header__item">
-                            <a href="#" class="header__link">Home</a>
+                            <a href="./index.html" class="header__link">Home</a>
                         </li>
                         <li class="header__item">
                             <a href="./portfolio.html" class="header__link">Our Projects</a>
