--- a/post.html
+++ b/post.html
@@ -20,7 +20,7 @@
                 <nav>
                     <ul class="header__nav">
                         <li class="header__item">
-                            <a href="#" class="header__link">Home</a>
+                            <a href="./index.html" class="header__link">Home</a>
                         </li>
                         <li class="header__item">
                             <a href="./portfolio.html" class="header__link">Our Projects</a>
@@ -323,7 +323,7 @@
                 <nav>
                     <ul class="modal-menu__nav">
                         <li class="modal-menu__item">
-                            <a href="#" class="modal-menu__link">Home</a>
+                            <a href="./index.html" class="modal-menu__link">Home</a>
                         </li>
                         <li class="modal-menu__item">
                             <a href="./portfolio.html" class="modal-menu__link">Our Projects</a>
